# Entsoe-electricity

./: .env.example  .gitignore  Dockerfile  Dockerfile.dbt  README.md  pyproject.toml
.github/workflows/: deploy.yml
ScriptForSpark/: README.md  entsoe_compact_load.py  entsoe_installed_capacity.py  entsoe_master_daily.py  entsoe_master_historical.py
dbt/: .gitignore  README.md  analytics.json  analytics_utf8.json  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  warehouse.json  warehouse_utf8.json
dbt/macros/: capacity_normalization.sql  generation_enrichment.sql  modeling_helpers.sql
dbt/models/: schema.yml
dbt/models/marts/: dim_country.sql  dim_country_border_connection.sql  dim_date.sql  dim_technology.sql  fct_country_border_flow_daily.sql  fct_country_load_daily.sql  fct_country_net_import_daily.sql  fct_country_price_daily.sql  fct_generation_capacity_daily_country.sql  fct_generation_capacity_daily_technology.sql  mart_country_energy_balance_daily.sql  (+2 more)
dbt/seeds/: country_names.csv  psr_type_mapping.csv
kestra/: .env.example  .env_encoded.example  README.md  daily.yml  dbt_daily.yml  docker-compose.yml  entsoe_ingestion_flow.yml  historical.yml  installed_capacity.yml  monthly_compaction.yml
src/: European Price Zones Mapping (2017-2026).json  HistoricalPrice.py  README.md  borders.json  countries.json  dailyPrice.py  daily_ingestion.py  historical_ingestion.py  ingest_entsoe.py  installed_capacity_ingestion.py
terraform/: README.md  main.tf  terraform.tfstate.back  terraform.tfvars.example  variables.tf
(+7 files in other folders)
